--- a/SSW.Rules.SharePointExtractor/SSW.Rules.SharePointExtractor/appsettings.example.json
+++ b/SSW.Rules.SharePointExtractor/SSW.Rules.SharePointExtractor/appsettings.example.json
@@ -16,6 +16,7 @@
     "WriteCategories": true,
     "FetchImages": true,
     "WriteRules": true,
-    "ProcessHistory": true
+    "ProcessHistory": true,
+    "WriteJsonFileHistory": true
   }
 }
