--- a/SSW.Rules.SharePointExtractor/SSW.Rules.SharePointExtractor/SSW.Rules.SharePointExtractor.csproj
+++ b/SSW.Rules.SharePointExtractor/SSW.Rules.SharePointExtractor/SSW.Rules.SharePointExtractor.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Converter\MarkdownConverter.cs" />
     <Compile Include="Converter\PostMarkdownConversion.cs" />
     <Compile Include="Converter\PreMarkdownConversion.cs" />
+    <Compile Include="Helpers\CodeBlocks.cs" />
     <Compile Include="Helpers\HtmlDescriptionDetails.cs" />
     <Compile Include="Helpers\HtmlFont.cs" />
     <Compile Include="Helpers\HtmlDescriptionList.cs" />
