--- a/SSW.Rules.SharePointExtractor/SSW.Rules.SharePointExtractor/packages.config
+++ b/SSW.Rules.SharePointExtractor/SSW.Rules.SharePointExtractor/packages.config
@@ -7,8 +7,18 @@
   <package id="Microsoft.Extensions.Configuration" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.CommandLine" version="3.1.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="3.1.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="3.1.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.3" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="3.1.3" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Configuration" version="3.1.3" targetFramework="net472" />
@@ -19,11 +29,11 @@
   <package id="Microsoft.SharePoint2016.CSOM" version="16.0.4690.1000" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="ReverseMarkdown" version="3.14.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.2" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="YamlDotNet" version="8.1.2" targetFramework="net472" />
 </packages>
