--- a/azure_pipelines/sharepoint_extract.yml
+++ b/azure_pipelines/sharepoint_extract.yml
@@ -3,13 +3,11 @@
 # to extract all sharepoint rules data & history into a data.json file.
 # https://aka.ms/yaml
 
-trigger:
-- main
-
-pr:
-  branches:
-    include:
-    - main
+# schedules:
+# - cron: 0 1 * * * # run at 1 am daily
+#   displayName: nightly cron trigger 
+#   # always run - the content source we're extracting isn't in this repo
+#   always: boolean 
 
 stages: 
 - stage: extract
