--- a/azure_pipelines/sharepoint_extract.yml
+++ b/azure_pipelines/sharepoint_extract.yml
@@ -24,6 +24,7 @@ stages:
     - task: MSBuild@1
       inputs:
         solution: SSW.Rules.SharePointExtractor\SSW.Rules.SharePointExtractor.sln
+        restoreNugetPackages: true
 
 
   - job: hello_world
