--- a/SSW.Rules.SharePointExtractor/SSW.Rules.SharePointExtractor/packages.config
+++ b/SSW.Rules.SharePointExtractor/SSW.Rules.SharePointExtractor/packages.config
@@ -19,6 +19,10 @@
   <package id="Microsoft.SharePoint2016.CSOM" version="16.0.4690.1000" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="ReverseMarkdown" version="3.14.0" targetFramework="net472" />
+  <package id="Serilog" version="2.10.0" targetFramework="net472" />
+  <package id="Serilog.Extensions.Logging" version="3.0.1" targetFramework="net472" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="5.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.2" targetFramework="net472" />
